2006-02-15  Ville Vainio  <vivainio@gmail.com>  

	* Magic.py: %Pprint works again

2006-02-11  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/hooks.py (editor): quote the call to the editor command,
	to allow commands with spaces in them.  Problem noted by watching
	Ian Oswald's video about textpad under win32 at
	http://showmedo.com/videoListPage?listKey=PythonIPythonSeries

	* IPython/UserConfig/ipythonrc: Replace @ signs with % when
	describing magics (we haven't used @ for a loong time).

	* IPython/ultraTB.py (VerboseTB.text.text_repr): Added patch
	contributed by marienz to close
	http://www.scipy.net/roundup/ipython/issue53.

2006-02-10  Ville Vainio  <vivainio@gmail.com>  

	* genutils.py: getoutput now works in win32 too
	
	* completer.py: alias and magic completion only invoked
	at the first "item" in the line, to avoid "cd %store" 
	nonsense.
	
2006-02-09  Ville Vainio  <vivainio@gmail.com>  

	* test/*: Added a unit testing framework (finally). 
	'%run runtests.py' to run test_*.
	
	* ipapi.py: Exposed runlines and set_custom_exc

2006-02-07  Ville Vainio  <vivainio@gmail.com>  

	* iplib.py: don't split "f 1 2" to "f(1,2)" in autocall,
	instead use "f(1 2)" as before.

2006-02-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py (IPythonDemo): Add new classes to the demo
	facilities, for demos processed by the IPython input filter
	(IPythonDemo), and for running a script one-line-at-a-time as a
	demo, both for pure Python (LineDemo) and for IPython-processed
	input (IPythonLineDemo).  After a request by Dave Kohel, from the
	SAGE team.
	(Demo.edit): added and edit() method to the demo objects, to edit
	the in-memory copy of the last executed block.

	* IPython/Magic.py (magic_edit): add '-r' option for 'raw'
	processing to %edit, %macro and %save.  These commands can now be
	invoked on the unprocessed input as it was typed by the user
	(without any prefilters applied).  After requests by the SAGE team